<resources>
    <string name="app_name">Entradas POS</string>
    <string name="tab_venta">Venta</string>
    <string name="tab_config">Config</string>
    <string name="sin_partidos">Sin partidos vigentes</string>
    <string name="sector_local">L (Local)</string>
    <string name="sector_visitante">V (Visitante)</string>
    <string name="pagar_efectivo">Efectivo</string>
    <string name="pagar_qr">Cobrar QR</string>
    <string name="btn_socio">Socio</string>
    <string name="quitar_socio">Quitar</string>
    <string name="cancelar_qr">Cancelar cobro</string>
    <string name="reimprimir">Reimprimir última</string>
    <string name="probar_conexion">Probar conexión</string>
    <string name="escanear_qr">Escanear QR</string>
    <string name="pago_aprobado">¡Pago aprobado!</string>
    <string name="aceptar">Aceptar</string>
    <string name="volver">← Volver</string>
    <string name="config_titulo">Configuración</string>
    <string name="guardar">Guardar</string>
    <string name="vendidas">vendidas</string>
    <string name="ultimas_ventas">Últimas ventas</string>
    <string name="col_hora">Hora</string>
    <string name="col_sector">Sector</string>
    <string name="col_cantidad">Cant.</string>
    <string name="col_pago">Pago</string>
    <string name="socio_escanear">Escanear socio</string>
    <string name="socio_quitar">Quitar socio</string>
    <string name="config_desc">Configuración</string>
    <string name="apariencia">Apariencia</string>
    <string name="tema_sistema">Sistema</string>
    <string name="tema_claro">Claro</string>
    <string name="tema_oscuro">Noche</string>
</resources>
